gccida/c3/shadow_tag_warned
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/shadow_tag_warned/src/c-decl.c:3751:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/shadow_tag_warned/src/c-decl.c:3755:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v9; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/shadow_tag_warned/src/c-decl.c:3759:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/shadow_tag_warned/src/c-decl.c:3822:22: error: expected expression
while ( ( tree_node *)p_chain[3] != values ) 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/shadow_tag_warned/src/c-decl.c:3822:11: error: use of undeclared identifier 'tree_node'
while ( ( tree_node *)p_chain[3] != values ) 
          ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/shadow_tag_warned/src/obj/c-decl.o] Error 1
